fix(builtins): fix read builtin ignoring tab chars

--- a/brush-shell/tests/cases/builtins/read.yaml
+++ b/brush-shell/tests/cases/builtins/read.yaml
@@ -36,3 +36,9 @@ cases:
       while IFS= read line; do
           echo "LINE: '$line'"
       done <<<"${content}"
+
+  - name: "read text with tabs and custom IFS"
+    stdin: |
+      while IFS="" read myvar; do
+          echo "myvar1: |${myvar}|"
+      done < <(printf "a\tb\nc d\te\n")
