--- a/deny.toml
+++ b/deny.toml
@@ -35,7 +35,7 @@ version = 2
 # List of explicitly allowed licenses
 # See https://spdx.org/licenses/ for list of possible licenses
 # [possible values: any SPDX 3.11 short identifier (+ optional exception)].
-allow = ["Apache-2.0", "BSD-2-Clause", "BSL-1.0", "MIT", "Unicode-3.0", "Zlib"]
+allow = ["Apache-2.0", "BSD-2-Clause", "BSL-1.0", "MIT", "NCSA", "Unicode-3.0", "Zlib"]
 # The confidence threshold for detecting a license from license text.
 # The higher the value, the more closely the license text must be to the
 # canonical license text of a valid SPDX license file.
@@ -81,6 +81,9 @@ skip = [
     { crate = "nu-ansi-term" },
     { crate = "itertools" },
     { crate = "hashbrown" },
+    { crate = "getrandom" },
+    { crate = "zerocopy" },
+    { crate = "wasi" },
 ]
 skip-tree = [
     { crate = "thiserror", reason = "Multiple crates use different versions" },
