chore: switch to testing on debian:testing
This should give us a more recent version of the bash oracle to use.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -378,8 +378,8 @@ jobs:
           - container: "fedora:latest"
             description: "Fedora/latest"
             prereqs_command: "dnf install -y bash-completion iputils grep less sed util-linux"
-          - container: "debian:latest"
-            description: "Debian/latest"
+          - container: "debian:testing"
+            description: "Debian/testing"
             prereqs_command: "apt-get update -y && apt-get install -y bash-completion bsdmainutils iputils-ping grep less sed"
           - container: "archlinux:latest"
             description: "Arch Linux/latest"
