--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -31,6 +31,8 @@ itertools = "0.14.0"
 lazy_static = "1.5.0"
 normalize-path = "0.2.1"
 rand = "0.9.1"
+strum = "0.27.1"
+strum_macros = "0.27.1"
 thiserror = "2.0.12"
 tracing = "0.1.41"
 
@@ -63,6 +65,7 @@ nix = { version = "0.30.1", features = [
     "term",
     "user",
 ] }
+terminfo = "0.9.0"
 uzers = "0.12.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
