--- a/brush-shell/tests/cases/builtins/exec.yaml
+++ b/brush-shell/tests/cases/builtins/exec.yaml
@@ -11,6 +11,11 @@ cases:
       exec
       [[ "${pid}" == "$$" ]] || echo "PID changed"
 
+  - name: "Exec with no arguments and redirection"
+    stdin: |
+      exec 3>&1
+      echo "Hello, fd 3!" >&3
+
   - name: "Exec a command"
     stdin: |
       exec $0 -c 'echo "In child shell"'
