--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -71,14 +71,13 @@ assert_fs = "1.1.2"
 colored = "2.2.0"
 descape = "2.0.3"
 diff = "0.1.13"
-dir-cmp = "0.1.0"
 expectrl = { git = "https://github.com/zhiburt/expectrl", rev = "a0f4f7816b9a47a191dd858080e8fd80ff71cd96" }
 glob = "0.3.2"
 indent = "0.1.1"
 junit-report = "0.8.3"
-pathdiff = "0.2.3"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 strip-ansi-escapes = "0.2.0"
 version-compare = "0.2.0"
+walkdir = "2.5.0"
