fix: allow newline in empty array assignment
Closes: #404 (Not found)

Signed-off-by: idealseal <realidealseal@protonmail.com>

--- a/brush-shell/tests/cases/arrays.yaml
+++ b/brush-shell/tests/cases/arrays.yaml
@@ -320,3 +320,8 @@ cases:
       echo "\"\${myarray[*]}\": ${myarray[*]}"
       echo "\${myarray[@]}:" ${myarray[@]}
       echo "\${myarray[*]}:" ${myarray[*]}
+
+  - name: "Empty array with newline"
+    stdin: |
+      declare -a myarray=(
+      )
