feat: impl user/group enumeration on unix-like systems

--- a/deny.toml
+++ b/deny.toml
@@ -110,7 +110,10 @@ skip-tree = [
 unknown-registry = "deny"
 unknown-git = "deny"
 allow-registry = ["https://github.com/rust-lang/crates.io-index"]
-allow-git = ["https://github.com/zhiburt/expectrl"]
+allow-git = [
+    "https://github.com/zhiburt/expectrl",
+    "https://github.com/reubeno/uzers-rs",
+]
 
 [sources.allow-org]
 # 1 or more github.com organizations to allow git sources for
