--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -62,7 +62,7 @@ nix = { version = "0.29.0", features = [
     "term",
     "user",
 ] }
-uzers = "0.12.1"
+uzers = { git = "https://github.com/reubeno/uzers-rs", rev = "0565ce5ab0c49a434d8e10860b03322f5fe76be4" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procfs = "0.17.0"
