--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -486,8 +486,8 @@ jobs:
           # https://github.com/actions/checkout/issues/334#issuecomment-716068696
           set -x
           nix --extra-experimental-features nix-command --extra-experimental-features flakes build --no-link --max-jobs 2 --cores 0 'nixpkgs#stdenv.cc.cc.lib' 'nixpkgs#glibc'
-          echo "LD_LIBRARY_PATH=$(nix path-info 'nixpkgs#stdenv.cc.cc.lib')/lib" >> "$GITHUB_ENV"
-          ln -s "$(nix path-info 'nixpkgs#glibc' --recursive | grep glibc | grep -v bin)/lib64" /lib64
+          echo "LD_LIBRARY_PATH=$(nix --extra-experimental-features nix-command --extra-experimental-features flakes path-info 'nixpkgs#stdenv.cc.cc.lib')/lib" >> "$GITHUB_ENV"
+          ln -s "$(nix --extra-experimental-features nix-command --extra-experimental-features flakes path-info 'nixpkgs#glibc' --recursive | grep glibc | grep -v bin)/lib64" /lib64
 
       # Checkout sources for YAML-based test cases
       - name: Checkout
