--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -456,10 +456,9 @@ jobs:
             description: "Fedora/latest"
             prereqs_command: "dnf install -y bash-completion iputils grep less sed util-linux"
 
-          # TODO: Enable after debugging through the test failures (or marking them disabled for Nix).
-          # - container: "nixos/nix:latest"
-          #   description: "NixOS/latest"
-          #   prereqs_command: "nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs#hexdump nixpkgs#bash-completion"
+          - container: "nixos/nix:latest"
+            description: "NixOS/latest"
+            prereqs_command: "nix --extra-experimental-features nix-command --extra-experimental-features flakes profile install nixpkgs#hexdump nixpkgs#bash-completion"
 
           # NOTE: We use Tumbleweed to make sure we get a recent enough version of bash.
           - container: "opensuse/tumbleweed:latest"
