test: fix tests on nixos container

--- a/brush-shell/tests/cases/builtins/command.yaml
+++ b/brush-shell/tests/cases/builtins/command.yaml
@@ -69,6 +69,7 @@ cases:
       command ls --help
 
   - name: "command with -p"
+    ignore_stderr: true # In case it fails on the oracle as well, ignore the specific error message.
     stdin: |
       unset PATH
 
