--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -35,4 +35,5 @@ thiserror = "2.0.11"
 tracing = "0.1.41"
 
 [target.'cfg(any(windows, unix))'.dependencies]
+nix = { version = "0.29.0", features = ["term"] }
 tokio = { version = "1.44.1", features = ["macros", "signal"] }
