--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,11 @@ xtask = "run --package xtask --"
 
 [build]
 rustflags = ["-C", "target-cpu=native"]
+
+[target.wasm32-unknown-unknown]
+# Select a getrandom backend that will work for this target
+rustflags = ["--cfg", 'getrandom_backend="wasm_js"']
+
+[target.wasm32-wasip2]
+# Uninteresting flag to ensure this overrides the flags in [build]
+rustflags = ["--cfg", "x"]
