--- a/brush-interactive/Cargo.toml
+++ b/brush-interactive/Cargo.toml
@@ -36,3 +36,6 @@ tracing = "0.1.41"
 
 [target.'cfg(any(windows, unix))'.dependencies]
 tokio = { version = "1.44.2", features = ["macros", "signal"] }
+
+[target.wasm32-unknown-unknown.dependencies]
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
