--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -65,6 +65,10 @@ brush-interactive = { version = "^0.2.16", path = "../brush-interactive", featur
 crossterm = "0.29.0"
 tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "sync"] }
 
+[target.wasm32-unknown-unknown.dependencies]
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
+uuid = { version = "1.16.0", features = ["js"] }
+
 [dev-dependencies]
 anyhow = "1.0.96"
 assert_cmd = "2.0.16"
