fix: handle complete builtin run without options

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,6 +16,7 @@ RUN apt-get update -y && \
         build-essential \
         curl \
         git \
+        iputils-ping \
         language-pack-en \
         neovim \
         sed \
