feat(apply_binary_predicate): implement `-ot` operand
fix(sys): abstract `ino` and `dev` methods

fix(fs): add wasm target `MetadataExt`

chore: add test for `-R`, be more explicit in file access

ref: implement generic method for device and inode

--- a/brush-shell/tests/cases/extended_tests.yaml
+++ b/brush-shell/tests/cases/extended_tests.yaml
@@ -110,6 +110,15 @@ cases:
       [[ -w test-file ]] && echo "-w correctly identified writable file"
       [[ -w link ]] && echo "-w correctly identified link to writable file"
 
+  - name: "Variable set and nameref tests"
+    stdin: |
+      foo="bar"
+      declare -n bang=foo
+      [[ -R bang ]] || echo "-R correctly identified nameref variable that is set"
+
+      declare -n somevar
+      [[ -R somevar ]] || echo "-R correctly identified nameref variable that isn't set"
+
   - name: "Unary string extended tests"
     stdin: |
       [[ -z "" ]] && echo "-z: Pass"
