fix(tests): wrong boolean operator

--- a/brush-shell/tests/cases/extended_tests.yaml
+++ b/brush-shell/tests/cases/extended_tests.yaml
@@ -114,32 +114,32 @@ cases:
     stdin: |
       foo="bar"
       declare -n bang=foo
-      [[ -R bang ]] || echo "-R correctly identified nameref variable that is set"
+      [[ -R bang ]] && echo "-R correctly identified nameref variable that is set"
 
       declare -n somevar
       [[ -R somevar ]] || echo "-R correctly identified nameref variable that isn't set"
 
   - name: "Files refer to same device and inode tests"
     stdin: |
-      [[ /bin/sh -ef /bin/sh ]] || echo "-ef correctly identified device and inode numbers"
+      [[ /bin/sh -ef /bin/sh ]] && echo "-ef correctly identified device and inode numbers"
 
-      [[ ! /etc/os-release -ef /bin/sh ]] || echo "-ef correctly identified device and inode numbers that do not match"
+      [[ ! /etc/os-release -ef /bin/sh ]] && echo "-ef correctly identified device and inode numbers that do not match"
 
   - name: "File is newer"
     stdin: |
       touch bar
       touch foo
-      [[ foo -nt bar ]] || echo "-nt correctly identified newer file"
+      [[ foo -nt bar ]] && echo "-nt correctly identified newer file"
 
-      [[ foo -nt file_no_exists ]] || echo "-nt correctly identified when file2 does not exist"
+      [[ foo -nt file_no_exists ]] && echo "-nt correctly identified when file2 does not exist"
 
   - name: "File is older"
     stdin: |
       touch foo
       touch bar
-      [[ foo -ot bar ]] || echo "-ot correctly identified older file"
+      [[ foo -ot bar ]] && echo "-ot correctly identified older file"
 
-      [[ file_no_exists -ot foo ]] || echo "-ot correctly identified when file1 does not exist"
+      [[ file_no_exists -ot foo ]] && echo "-ot correctly identified when file1 does not exist"
 
   - name: "Unary string extended tests"
     stdin: |
