chore: inherit workspace lints across all crates

--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -11,6 +11,9 @@ readme.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [lib]
 bench = false
 
