--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -11,6 +11,9 @@ readme.workspace = true
 repository.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 anyhow = "1.0.98"
 brush-shell = { version = "^0.2.17", path = "../brush-shell" }
