fix: enable unnameable_types lint and fix errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,15 @@ repository = "https://github.com/reubeno/brush"
 rust-version = "1.75.0"
 
 [workspace.lints.rust]
+warnings = { level = "deny" }
 rust_2018_idioms = { level = "deny", priority = -1 }
+unnameable_types = "deny"
 unsafe_op_in_unsafe_fn = "deny"
 unused_lifetimes = "deny"
 unused_macro_rules = "deny"
+# For now we allow unknown lints so we can opt into warnings that don't exist on the
+# oldest toolchain we need to support.
+unknown_lints = { level = "allow", priority = -100 }
 
 [workspace.lints.clippy]
 all = { level = "deny", priority = -1 }
