--- a/brush-shell/tests/cases/builtins/builtin.yaml
+++ b/brush-shell/tests/cases/builtins/builtin.yaml
@@ -12,3 +12,14 @@ cases:
 
   - name: "valid builtin with hyphen args"
     stdin: builtin echo -e "Hello\nWorld"
+
+  - name: "builtin passing through results"
+    stdin: |
+      builtin false; echo "builtin false => $?"
+      builtin true; echo "builtin true => $?"
+
+  - name: "builtin with decl builtin"
+    known_failure: true # Needs investigation
+    stdin: |
+      builtin declare variable=value
+      declare -p variable
