test: add known failing tests for reported issues

--- a/brush-shell/tests/cases/arithmetic.yaml
+++ b/brush-shell/tests/cases/arithmetic.yaml
@@ -97,6 +97,12 @@ cases:
       echo "32 >> 2 == $((32>>2))"
       echo " 1 << 4 == $((1<<4))"
 
+  - name: Shift arithmetic in conditional"
+    known_failure: true
+    stdin: |
+      (( 1 >> 1 )) && echo "1. true"
+      (( 1 << 1 )) && echo "2. true"
+
   - name: "Variable references"
     stdin: |
       x=10
