test(mapfile): add `-s` case

--- a/brush-shell/tests/cases/builtins/mapfile.yaml
+++ b/brush-shell/tests/cases/builtins/mapfile.yaml
@@ -20,3 +20,7 @@ cases:
     stdin: |
       mapfile -t -n 2 -d 'Z' myarray < <(echo -ne "helloZthereZgeneralZkenobi")
       [[ "${myarray[*]}" == "hello there" ]]
+  - name: "mapfile -s"
+    stdin: |
+      mapfile -t -n 2 -s 1 -d 'Z' myarray < <(echo -ne "helloZthereZgeneralZkenobi")
+      [[ "${myarray[*]}" == "there general" ]]
