--- a/.github/workflows/spelling.yaml
+++ b/.github/workflows/spelling.yaml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout brush
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Spell check repo
         uses: crate-ci/typos@master
